# DualityRF

./: .gitignore  .project  CMakeLists.txt  CMakePresets.json  compile_commands.json
src/: BBD_0001.TXT  CMakeLists.txt  main.cpp  resources.qrc
src/cmake/: copy_if_exists.cmake
src/core/: SDRManager.cpp  SDRManager.h  SDRReceiver.cpp  SDRReceiver.h  SDRTransmitter.cpp  SDRTransmitter.h
src/test/: record_hackrf.cpp  replay_hackrf.cpp
src/ui/: CapturePreviewWidget.cpp  CapturePreviewWidget.h  MainWindow.cpp  MainWindow.h  SpectrumWidget.cpp  SpectrumWidget.h  SplashScreen.cpp  SplashScreen.h  WaterfallWidget.cpp  WaterfallWidget.h  WaveformWidget.cpp  WaveformWidget.h
src/ui/componenets/: InfoDialog.cpp  InfoDialog.h
